--- a/parts/res/values-zh-rCN/strings.xml
+++ b/parts/res/values-zh-rCN/strings.xml
@@ -15,8 +15,11 @@
      limitations under the License.
 -->
 <resources>
+    <!-- Ambient settings -->
+    <string name="ambient_enable">启用环境显示</string>
+
     <!-- Popup camera settings -->
-    <string name="popup_title">前置摄像头效果</string>
+    <string name="popup_title">前置摄像头设置</string>
     <string name="popup_led_title">摄像头 LED 灯</string>
     <string name="popup_led_summary">在前置摄像头升起和收回时启用 LED 灯</string>
     <string name="popup_sound_title">声音效果</string>
@@ -48,6 +51,7 @@
     <string name="thermal_streaming">流媒体</string>
 
     <!-- Dirac settings -->
+    <string name="dirac_enable">启用米音</string>
     <string name="dirac_title">米音</string>
     <string name="dirac_summary">使用米音和 Hi-Fi 来优化音质</string>
     <string name="dirac_headset_title">耳机类型</string>
